---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2022-11-23
  Bugfixes:
    - Mod entities deleted by the "Remove all entities" and "Delete surface" button in editor no longer crashes the mod
  Changes:
    - Implements entity validity check before every combinator updates, mod's time usage is expected to increase about 10-20%
    - This change is deemed necessary for stability reasons as it allows the mod to handle entity anomalies and notify user when mod entities were incorrectly handled by other mods (or editor)
  Control:
    - Ccs, assemblers and containers now perform their latching actions one-tick after their cloning events have been handled
    - This solves the problem of entities possibly latching on to combinators without a state due to unknown cloning order
    - Delaying the find_chest() and find_assembler() calls by one tick should help with smoothening the UPS spike caused by area/brush cloning
  Locale:
    - Updated strings for blueprint.delayed-transfer to inform mod limitation while updating blueprints
    - Missing translation for new keys: crafting_combinator.err
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2022-11-14
  Bugfixes:
    - Fixes possible bug that can happen when housekeeping module breaks lookup table reference (https://github.com/loneguardian/CraftingCombinator/commit/38e779f4361dc6cad7e18313a3ffc0825bda4dbb)
  Changes:
    - Crafting combinators are no longer fast-replaceable with constant combinators (and vice versa)
      - This should reduce unwanted behaviors due to fast-replace such as:
         - Crafting combinators leaving behind orphaned entities